<resources>
    <string name="app_name1">交警端</string>
    <string name="app_name2">市民端</string>

    <string name="admin_AK">Y4c93TlAV7FLh4ITPVDGqmaAW1b8jGTN</string>
    <string name="user_AK">ztFTWdtYZjHkS8imXYGiTwGE2RdBGWD4</string>

    <!-- MainActivity -->
    <string name="menu_admin_home">HOME</string>
    <string name="menu_admin_mistake">违规</string>
    <string name="menu_myself">我的</string>
    <string name="menu_user_consume">耗时</string>
    <string name="back">再按一次退出程序!</string>

    <!-- LoadingDialog -->
    <string name="Loading_loading">加载中…</string>
    <string name="Loading_login">登录中…</string>
    <string name="Loading_upload">上传中…</string>
    <string name="Loading_search">查询中…</string>

    <!-- LoginActivity -->
    <string name="login_userName">用户名</string>
    <string name="login_password">密码</string>
    <string name="login">登录</string>
    <string name="register">用户注册</string>
    <string name="usernameError">用户名为空</string>
    <string name="passwordError">密码为空</string>
    <string name="netWorkError">请求失败</string>

    <!-- MyselfFragment -->
    <string name="myself_account">账号管理</string>
    <string name="myself_feedback">意见反馈</string>
    <string name="myself_examine">版本检查</string>
    <string name="myself_exit">退出登录</string>

    <!-- CircleDialog -->
    <string name="Dialog_title">提示</string>
    <string name="Dialog_CityName">请正确输入道路名称！！！</string>
    <string name="Dialog_Examine_text">已是最新版本1.0</string>
    <string name="Dialog_text">是否确定退出</string>
    <string name="Dialog_immutable">不可更改</string>
    <string name="Dialog_passWordSet">修改密码</string>
    <string name="Dialog_passWordHint">请输入新的密码</string>
    <string name="Dialog_passWordNull">密码不能为空</string>
    <string name="Dialog_passWordError">不能与原始密码相同</string>
    <string name="Dialog_TELdSet">电话号码修改</string>
    <string name="Dialog_TELHint">请输入新的电话号码</string>
    <string name="Dialog_TELNull">电话号不能为空</string>
    <string name="Dialog_HomedSet">现居住地址修改</string>
    <string name="Dialog_HomeHint">请输入新的住址</string>
    <string name="Dialog_HomeNull">现住址不能为空</string>
    <string name="Dialog_feedback_number_error">字数已超过200</string>
    <string name="Dialog_true">确定</string>
    <string name="Dialog_false">取消</string>

    <!-- FeedbackActivity -->
    <string name="feedback_question">问题描述</string>
    <string name="feedback_describe">描述不要超过200字</string>
    <string name="feedback_number">字数：</string>
    <string name="feedback_way">联系方式</string>
    <string name="feedback_mail">填写邮箱</string>
    <string name="feedback_feedback">提交反馈</string>

    <string name="feedback_describe_error">请填写反馈意见</string>
    <string name="feedback_mail_null">请填写邮箱</string>
    <string name="feedback_mail_error">请正确填写邮箱</string>
    <string name="feedback_success">提交成功</string>
    <string name="feedback_fail">提交失败</string>

    <!-- SafetyActivity -->
    <string name="safetyTitle">我的信息</string>
    <string name="userName">姓名:</string>
    <string name="userGander">性别:</string>
    <string name="userId">身份证号:</string>
    <string name="userPassword">密码:</string>
    <string name="userTel">电话:</string>
    <string name="userHome">住址:</string>
    <string name="makeSure">确定</string>

    <!-- MistakeFragment -->
    <string name="menu_search">查询</string>
    <string name="menu_uploading">上传</string>

    <!-- UploadFragment -->
    <string name="car_number">车辆牌号:</string>
    <string name="car_color">车身颜色:</string>
    <string name="car_type">车辆类型:</string>
    <string name="other_type">其他类型:</string>
    <string name="input_other_type">请输入车辆类型</string>
    <string name="carBoard_color">车牌颜色:</string>
    <string name="mistake_time">违法时间:</string>
    <string name="mistake_place">违法地点:</string>
    <string name="mistake_describe">违法描述:</string>
    <string name="police">执法交警:</string>
    <string name="mistake_uploading">提交</string>

    <string name="car_big">大型客车</string>
    <string name="car_small">小型客车</string>
    <string name="truck_big">大型货车</string>
    <string name="truck_small">小型货车</string>
    <string name="motorcycle">摩托车</string>

    <string name="other">其他</string>

    <string name="color_blue">蓝色</string>
    <string name="color_yellow">黄色</string>
    <string name="color_white">白色</string>
    <string name="color_black">黑色</string>
    <string name="color_green">绿色</string>

    <string name="errorCarNumber">请填写车辆牌号</string>
    <string name="errorCarColor">请填写车辆颜色</string>
    <string name="errorType">请选择车辆类型</string>
    <string name="errorBoardColor">请选择车牌颜色</string>
    <string name="errorDescribe">请描述违法违规内容</string>

    <string name="uploading_success">上传成功!!!</string>
    <string name="uploading_fail">无法上传!!!</string>

    <!-- SearchFragment -->
    <string name="searchMsg">输入车主身份证号或车牌号码</string>
    <string name="searchMsgError">请输入车主身份证号或车牌号码</string>
    <string name="searchFail">查询失败</string>

    <!-- Message -->
    <string name="carUserName">车主姓名:</string>
    <string name="carUserSex">性别:</string>
    <string name="carUserID">身份证号:</string>
    <string name="carNumber">车辆牌号:</string>
    <string name="carType">车辆类型:</string>
    <string name="carName">车辆品牌:</string>
    <string name="carColor">车身颜色:</string>
    <string name="carMistake">违章记录:</string>
    <string name="msgBack">返回</string>
    <string name="msgList">违规描述</string>

    <!-- HomeFragment -->
    <string name="trafficInfo">道路信息</string>
    <string name="road1000">当前位置1000米周围街道情况：</string>
    <string name="banner_roadName">道路名称:</string>
    <string name="banner_roadMsg">道路拥堵详情:</string>
    <string name="banner_roadEvaluate">预计通过所需时间(min):</string>
    <string name="banner_roadDistance">拥堵距离(m):</string>
    <string name="banner_roadSpeed">平均通行速度(km/h):</string>
    <string name="banner_roadTrend">较10分钟前的趋势:</string>
    <string name="banner_roadDesc">路段拥堵描述:</string>

    <!-- ConsumeFragment -->
    <string name="roadName">您当前所在街道：</string>
    <string name="roadMsg">道路整体通行情况：</string>

    <!-- RegisterActivity -->
    <string name="Register_userNameNull">用户名不能为空</string>
    <string name="Register_passWordNull">密码不能为空</string>
    <string name="Register_SurePassWordNull">确认密码不能为空</string>
    <string name="Register_passWordError">两次密码输入不一致</string>
    <string name="Register_userIDNull">身份证号不能为空</string>
    <string name="Register_userIDError">请正确填写身份证号</string>
    <string name="Register_TELNull">电话不能为空</string>
    <string name="Register_TELError">手机号的长度只能为11位</string>
    <string name="Register_HomeNull">现居住地不能为空</string>
    <string name="Register_userPower">用户</string>
</resources>